fixed z-index of .context

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 /* Nav start text component */
 
 nav {
-  z-index: 1;
+  z-index: 2;
   background-color: #FFFFFF;
   top: 0;
   position: fixed;
@@ -53,6 +53,7 @@ nav li:hover {
 
 /* text component  */
 .context {
+  z-index: 1;
   color: white;
   width: 100%;
   display: flex;
